--- a/app/src/main/res/layout/sign_up_activity.xml
+++ b/app/src/main/res/layout/sign_up_activity.xml
@@ -18,5 +18,6 @@
     <Button
         android:id="@+id/takePhotoButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/take_photo"/>
 </LinearLayout>
